--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,4 @@ NODE_ENV=development
 
 PORT=3000
 
-MONGO_DB=cloakService
-MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb://mongodb:27017/cloakService
