--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
     "fastify": "^5.3.2",
     "joi": "^17.13.3",
     "mongoose": "^8.14.2",
+    "nestjs-pino": "^4.4.0",
+    "pino-http": "^10.4.0",
+    "pino-mongodb": "^4.3.0",
+    "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "terminus": "^1.1.0"
@@ -58,7 +62,7 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.15.17",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
