--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "terminus": "^1.1.0"
+    "terminus": "^1.1.0",
+    "uuidv7": "^1.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
