--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "fastify": "^5.3.2",
     "husky": "^9.1.7",
     "joi": "^17.13.3",
+    "lint-staged": "^16.0.0",
     "mongoose": "^8.14.2",
     "nestjs-pino": "^4.4.0",
     "pino-mongodb": "^4.3.0",
