--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nestjs/platform-fastify": "^11.1.0",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/terminus": "^11.0.0",
+    "crawler-user-agents": "^1.15.0",
     "fastify": "^5.3.2",
     "husky": "^9.1.7",
     "joi": "^17.13.3",
@@ -52,6 +53,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "terminus": "^1.1.0",
+    "user-agents": "^1.1.538",
     "uuidv7": "^1.0.2"
   },
   "devDependencies": {
