--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "crawler-user-agents": "^1.15.0",
     "fastify": "^5.3.2",
     "husky": "^9.1.7",
+    "isbot": "^5.1.28",
     "joi": "^17.13.3",
     "lint-staged": "^16.0.0",
     "mongoose": "^8.14.2",
@@ -53,7 +54,6 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "terminus": "^1.1.0",
-    "user-agents": "^1.1.538",
     "uuidv7": "^1.0.2"
   },
   "devDependencies": {
